Fix HTML encoding and update image paths

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Legacy BD Player List</title>
-  <link rel="icon" href="/public/LRBD.png" type="image/png">
+  <link rel="icon" href="LRBD.png" type="image/png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="wrapper">
     <header>
       <div id="title">
-        <img src="/public/LRBD.png" alt="Server Logo" id="server-logo">
+        <img src="LRBD.png" alt="Server Logo" id="server-logo">
         <span id="server-title">Legacy Roleplay Bangladesh | Fivem Player Tracker</span>
       </div>
       <div id="server-meta">
@@ -32,7 +32,7 @@
         </select>
       </div>
       <div id="refresh-status">
-        <img src="/public/refresh.svg" alt="Refresh Icon">
+        <img src="refresh.svg" alt="Refresh Icon">
         <span id="refresh-timer">30s</span>
       </div>
     </section>
@@ -98,4 +98,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
